--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
   </issueManagement>
   <properties>
     <javac.version>1.8</javac.version>
-    <auto-service.version>1.0-rc6</auto-service.version>
+    <auto-service.version>1.0.1</auto-service.version>
     <compile-testing.version>0.18</compile-testing.version>
   </properties>
   <dependencies>
@@ -65,6 +65,12 @@
       <artifactId>compile-testing</artifactId>
       <version>${compile-testing.version}</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.auto</groupId>
+          <artifactId>auto-common</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.google.auto.service</groupId>
