Generates javadoc for all elements including private elements.

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
           </configuration>
         </plugin>
         <plugin>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <show>private</show>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
           <configuration>
