--- a/pom.xml
+++ b/pom.xml
@@ -226,7 +226,7 @@
   </build>
   <profiles>
     <profile>
-      <id>release</id>
+      <id>deploy</id>
       <build>
         <plugins>
           <plugin>
