--- a/pom.xml
+++ b/pom.xml
@@ -47,16 +47,6 @@
     <system>GitHub</system>
     <url>https://github.com/IRCM/generate-property-names/issues</url>
   </issueManagement>
-  <distributionManagement>
-    <repository>
-      <id>sonatype</id>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    <snapshotRepository>
-      <id>sonatype</id>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
   <properties>
     <java.version>21</java.version>
     <auto-service.version>1.1.1</auto-service.version>
@@ -64,6 +54,7 @@
     <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
     <license-maven-plugin.version>4.1</license-maven-plugin.version>
     <spotbugs-maven-plugin.version>4.7.3.6</spotbugs-maven-plugin.version>
+    <central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
   </properties>
   <dependencies>
     <dependency>
@@ -136,6 +127,15 @@
             </execution>
           </executions>
         </plugin>
+        <plugin>
+          <groupId>org.sonatype.central</groupId>
+          <artifactId>central-publishing-maven-plugin</artifactId>
+          <version>0.7.0</version>
+          <extensions>true</extensions>
+          <configuration>
+            <publishingServerId>central</publishingServerId>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -171,6 +171,10 @@
           </plugin>
           <plugin>
             <artifactId>maven-gpg-plugin</artifactId>
+          </plugin>
+          <plugin>
+            <groupId>org.sonatype.central</groupId>
+            <artifactId>central-publishing-maven-plugin</artifactId>
           </plugin>
         </plugins>
       </build>
